@@ -60,7 +60,14 @@ Version 5.1.6
    closeReader option set to true when we were supposed to.  (Bug #34460)
  - Fixed problem where the bit data type would continue to return null values
    once it saw a null value in a previous row (bug #36313)      
-      
+ - Fixed problem with MembershipUser.GetPassword where attempting to retrieve a
+   password on a user where password Q&A is not required would throw an exception (bug #36159)      
+ - Fixed a problem with MembershipUser.GetNumberOfUsersOnline.  
+   It actually works now  :) (bug #36157)
+ - Fixed documentation that still stated that setting port to -1 was necessary for
+   a named pipe connection (bug #35356)      
+ - Fixed data type processing so that geometry fields are returned as binary.  (bug #36081)      
+          
 Version 5.1.5 - 2/11/2008
   - Fixed problem with membership provider where FindUserByEmail would fail trying to add
     a second parameter with the same name as the first (bug #33347)
